15-securite/c1-opa-gatekeeper-constraints/constraints/constraint_k8s-disallowed-tags .yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: container-image-must-not-have-latest-tag
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    tags: ["latest", ""]
    # exemptImages: ["fgtech/hpa-example:latest"]
    # exemptImages: ["fgtech/hpa-example:latest", "fgtech/hpa-example"]
